business logic was moved to services, my card section fixed

--- a/src/main/resources/templates/home/main.html
+++ b/src/main/resources/templates/home/main.html
@@ -34,6 +34,7 @@
             --primary-color: #0C2340;
             --secondary-color: #E30A17;
             --body-color: #212834;
+            --body-color2: #303c44;
             --light-color: #F6F6F6;
             --color-primary: #E30B5D;
             --color-primary-dark: #C1074D;
